# cortext

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/commands/: context-map.md  context-query.md  context-slice.md
.github/: FUNDING.yml  RELEASE_TEMPLATE.md  copilot-instructions.md  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: tests.yml
apps/brain-viz/: README.md
apps/pixel-brain/: README.md
docs/: activity-stream-schema.md  architecture.md  benchmarks.md  codex-handoff.md  community-comparison.md  context-pack-format.md  demo.md  pixel-brain-mode.md  public-launch-checklist.md  release-checklist.md  release.md  roadmap.md  visualization-plan.md
examples/: activity-stream.sample.jsonl  codex-session.sample.jsonl  contextopt.config.example.toml  tool-events.sample.jsonl
examples/benchmarks/: README.md
examples/benchmarks/basic-java/: README.md  benchmark.config.json
examples/benchmarks/basic-kotlin/: README.md  benchmark.config.json
examples/benchmarks/basic-python/: README.md  app.py  benchmark.config.json  helpers.py  legacy_dump.py
examples/benchmarks/basic-typescript/: README.md  benchmark.config.json
examples/sample-project/: README.md  app.py  helpers.py
integrations/claude-commands/: context-map.md  context-query.md  context-slice.md
integrations/codex/: contextopt-prompt.md
integrations/copilot/: copilot-instructions.md
scripts/: install_integrations.py  pre_release_proof.py  render_benchmark_chart.py
src/contextopt/: activity.py  activity_adapters.py  benchmark.py  cli.py  config.py  freshness.py  gain.py  graph.py  ids.py  integrations.py  mapper.py  mcp_server.py  memory.py  query.py  read_modes.py  references.py  retrieval.py  scanner.py  session_audit.py  slicer.py  stats.py  token_estimator.py
tests/: test_activity_adapters.py  test_agent_readiness.py  test_cli.py  test_incremental_mapping.py  test_integrations_install.py  test_js_ts_extractor.py  test_language_extractors.py  test_mapper_export.py  test_phase1_exports_query.py  test_python_extractor.py  test_scanner.py  test_session_audit.py  test_token_efficiency.py  test_visualization_export.py
(+36 files in other folders)
